# prime-rl

./: .gitignore  .tmuxinator.yaml  AGENTS.md  CITATION.cff  Dockerfile.cuda  Dockerfile.rocm  LICENSE  README.md  pyproject.toml  tmux.sh
.github/: pull_request_template.md
.github/workflows/: cpu_tests.yaml  gpu_tests.yaml  release.yaml
configs/: README.md
configs/acereason_math/stage1/: infer.toml  orch.toml  train.toml
configs/acereason_math/stage2/: infer.toml  orch.toml  train.toml
configs/alphabet_sort/3b/: infer.toml  orch.toml  train.toml
configs/alphabet_sort/rl/: train.toml
configs/debug/: orch.toml  sft.toml  sft_moe.toml  train.toml
configs/debug/rl/: train.toml
configs/debug/sft/: train.toml
configs/deepscaler_math/stage1/: infer.toml  orch.toml  train.toml
configs/deepscaler_math/stage2/: infer.toml  orch.toml  train.toml
configs/deepscaler_math/stage3/: infer.toml  orch.toml  train.toml
configs/eval/: debug.toml
configs/eval/model/: qwen3-no-think.toml  qwen3.toml  r1-0528.toml  r1.toml
configs/hendrycks_math/14b/: orch.toml  train.toml
configs/hendrycks_math/16b-a3b/: infer.toml  orch.toml  train.toml
configs/hendrycks_math/1b/: infer.toml  orch.toml  train.toml
configs/hendrycks_math/30b-a3b/: infer.toml  orch.toml  train.toml
configs/hendrycks_math/32b/: orch.toml  train.toml
configs/hendrycks_math/7b/: orch.toml  train.toml
configs/inference/: debug.toml  math_only_1b.toml  reverse_text.toml  simple_math.toml  simple_math_7b.toml
configs/inference/hendrycks_math/: 14b.toml  1b.toml  32b.toml  7b.toml
configs/inference/intellect_math/: 1b.toml
configs/intellect_math/1b/: orch.toml  train.toml
configs/intellect_math/7b/: infer.toml  orch.toml  train.toml
configs/orchestrator/: math_only_1b.toml  reverse_text.toml  simple_math.toml  simple_math_7b.toml
configs/orchestrator/hendrycks_math/: 14b.toml  1b.toml  32b.toml  7b.toml
configs/orchestrator/intellect_math/: 1b.toml  7b.toml
configs/orchestrator/wordle/: 14b.toml  1b.toml
configs/reverse_text/: infer.toml  orch.toml  sft.toml  train.toml
configs/reverse_text/16b-a3b/: infer.toml  orch.toml  train.toml
configs/reverse_text/rl/: orch.toml  train.toml
configs/reverse_text/sft/: train.toml
configs/trainer/: math_only_1b.toml  simple_math.toml  simple_math_7b.toml
configs/trainer/alphabet-sort/: 3b.toml
configs/trainer/hendrycks_math/: 1b.toml  7b.toml
configs/trainer/intellect_math/: 1b.toml  7b.toml
configs/training/: debug.toml  formatask.toml  math_only_1b.toml  math_only_7b.toml  reverse_text.toml  simple_ascii_tree.toml  simple_math.toml  simple_math_7b.toml  simple_multitask.toml  simple_unscramble.toml
configs/training/orchestrator/: debug.toml
configs/wordle/14b/: infer.toml  orch.toml  train.toml
configs/wordle/1b/: infer.toml  orch.toml  train.toml
docs/: async.md  benchmarking.md  checkpointing.md  configs.md  deployment.md  entrypoints.md  environments.md  logging.md  troubleshooting.md
environments/vf_acereason_math/: README.md  pyproject.toml  vf_acereason_math.py
environments/vf_alphabet_sort/: README.md  pyproject.toml  vf_alphabet_sort.py
environments/vf_ascii_tree/: README.md  pyproject.toml  vf_ascii_tree.py
environments/vf_deepscaler_math/: README.md  pyproject.toml  vf_deepscaler_math.py
environments/vf_hendrycks_math/: README.md  pyproject.toml  vf_hendrycks_math.py
environments/vf_intellect_math/: README.md  pyproject.toml  vf_intellect_math.py
environments/vf_intellect_math_alt/: README.md  pyproject.toml
environments/vf_pydantic_adherence/: README.md  pyproject.toml  vf_pydantic_adherence.py
environments/vf_reverse_text/: README.md  pyproject.toml  vf_reverse_text.py
environments/vf_skywork_math/: README.md  pyproject.toml  vf_skywork_math.py
environments/vf_unscramble/: README.md  pyproject.toml  vf_unscramble.py
examples/: README.md
examples/reverse_text/: README.md
examples/reverse_text/sft/: train.toml
examples/wordle/: README.md
examples/wordle/rl/: infer.toml  orch.toml  train.toml
examples/wordle/sft/: train.toml
scripts/: chat.py  clean.sh  install.sh  test_env.py  tmux.sh
src/prime_rl/: rl.py
src/prime_rl/environments/: registry.py
src/prime_rl/eval/: config.py  envs.py  eval.py  registry.py  utils.py
src/prime_rl/inference/: config.py  server.py
src/prime_rl/orchestrator/: advantage.py  batch.py  buffer.py  ckpt.py  client.py  config.py  data.py  envs.py  logger.py  orchestrator.py  utils.py  vf_adapters.py
src/prime_rl/trainer/: ckpt.py  config.py  data.py  envs.py  logger.py  loss.py  model.py  optim.py  parallel_dims.py  perf.py  scheduler.py  train.py  utils.py  weights.py  world.py
src/prime_rl/utils/: config.py  logger.py  monitor.py  pydantic_config.py  tensor_hashing.py  utils.py  validation.py
src/zeroband/: rl.py  train.py
src/zeroband/environments/: registry.py
src/zeroband/eval/: config.py  envs.py  eval.py  registry.py  utils.py
src/zeroband/inference/: config.py  infer.py  server.py  vllm_worker.py
src/zeroband/orchestrator/: ckpt.py  client.py  config.py  data.py  logger.py  orchestrator.py  utils.py
src/zeroband/trainer/: ckpt.py  config.py  data.py  logger.py  loss.py  model.py  perf.py  train.py  utils.py  weights.py  world.py
src/zeroband/training/: checkpoint.py  ckpt.py  config.py  data.py  envs.py  logger.py  loss.py  metrics.py  model.py  parquet.py  perf.py  train.py  utils.py  weights.py  world.py
src/zeroband/utils/: config.py  logger.py  monitor.py  pydantic_config.py  utils.py
tests/: conftest.py
tests/e2e/: test_rl.py
tests/integration/: test_eval.py  test_orchestrator.py  test_rl.py  test_sft.py  test_sglang_backend.py  test_trainer.py  test_trainer_path.py
tests/integration/eval/: test_debug.py
tests/integration/orchestrator/: test_debug.py
tests/integration/trainer/: test_debug.py  test_debug_path.py  test_orchestrator.py
tests/integration/training/: test_debug.py  test_debug_path.py  test_orchestrator.py
tests/unit/: test_config.py  test_venv.py
tests/unit/eval/: test_config.py
(+127 files in other folders)
