[project]
name = "prime-rl"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "beartype>=0.21.0",
    "cydifflib>=1.2.0",
    "datasets>=3.6.0",
    "google-cloud-storage>=3.1.1", # TODO: Delete after refactor
    "jaxtyping>=0.3.2",
    "liger-kernel>=0.5.10",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "openai>=1.90.0",
    "pydantic>=1.10.13",
    "pydantic-settings>=2.10.1",
    "pylatexenc>=2.10",
    "pynvml>=12.0.0",
    "shardcast>=0.3.2",
    "tomli>=2.2.1",
    "torch>=2.7.0",
    "transformers>=4.53.0",
    "uvloop>=0.21.0",
    "vllm==0.10.0",
    "wandb>=0.20.1",
    "lovely-tensors>=0.1.18",
    "rich>=14.0.0",
    "tomli-w",
    "verifiers",
    "textarena>=0.6.16",
    "nltk>=3.9.1",
    "math-verify>=0.8.0",
    "muon_fsdp2>=0.3.0",
]

[project.scripts]
rl = "prime_rl.rl:main"
trainer = "prime_rl.trainer.rl.train:main"
orchestrator = "prime_rl.orchestrator.orchestrator:main"
inference = "prime_rl.inference.server:main"
sft = "prime_rl.trainer.sft.train:main"
eval = "prime_rl.eval.eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
flash-attn = ["flash-attn>=2.8.0"]
flash-infer = ["flashinfer-python>=0.2.8rc1"]

vf = [
    "alphabet-sort",
    "ascii-tree",
    "pydantic-adherence",
    "reverse-text",
    "unscramble",
    "skywork-math",
    "deepscaler-math",
    "acereason-math",
    "hendrycks-math",
    "intellect-math",
    "aime2024",
    "aime2025",
    "math500",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
prerelease = "allow"

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
verifiers = { git = "https://github.com/willccbb/verifiers", rev = "9cf207a" }

vf-wordle = { git = "https://github.com/willccbb/verifiers.git", subdirectory = "environments/vf_wordle", rev = "main" }
reverse-text = { url = "https://hub.primeintellect.ai/primeintellect/reverse-text/@latest/reverse_text-0.1.1-py2.py3-none-any.whl" }
ascii-tree = { url = "https://hub.primeintellect.ai/primeintellect/ascii-tree/@latest/ascii_tree-0.1.4-py2.py3-none-any.whl" }
pydantic-adherence = { url = "https://hub.primeintellect.ai/primeintellect/pydantic-adherence/@latest/pydantic_adherence-0.1.1-py2.py3-none-any.whl" }
unscramble = { url = "https://hub.primeintellect.ai/primeintellect/unscramble/@latest/unscramble-0.1.1-py2.py3-none-any.whl" }
alphabet-sort = { url = "https://hub.primeintellect.ai/primeintellect/alphabet-sort/@latest/alphabet_sort-0.1.3-py2.py3-none-any.whl" }
skywork-math = { url = "https://hub.primeintellect.ai/primeintellect/skywork-math/@latest/skywork_math-0.1.2-py2.py3-none-any.whl" }
deepscaler-math = { url = "https://hub.primeintellect.ai/primeintellect/deepscaler-math/@latest/deepscaler_math-0.1.2-py2.py3-none-any.whl" }
acereason-math = { url = "https://hub.primeintellect.ai/primeintellect/acereason-math/@latest/acereason_math-0.1.2-py2.py3-none-any.whl" }
hendrycks-math = { url = "https://hub.primeintellect.ai/primeintellect/hendrycks-math/@latest/hendrycks_math-0.1.2-py2.py3-none-any.whl" }
intellect-math = { url = "https://hub.primeintellect.ai/primeintellect/intellect-math/@latest/intellect_math-0.1.2-py2.py3-none-any.whl" }
aime2024 = { url = "https://hub.primeintellect.ai/primeintellect/aime2024/@latest/aime2024-0.1.7-py3-none-any.whl" }
aime2025 = { url = "https://hub.primeintellect.ai/primeintellect/aime2025/@latest/aime2025-0.1.7-py3-none-any.whl" }
math500 = { url = "https://hub.primeintellect.ai/primeintellect/math500/@latest/math500-0.1.7-py3-none-any.whl" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/test/cu128"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]


[tool.ruff.lint]
select = ["F", "I"]
ignore = ["F722", "F821"] # Need to ignore for jaxtyping (https://docs.kidger.site/jaxtyping/faq/)

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as gpu (deselect with '-m \"not gpu\"')",
]
